--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
-  <body>
+  <body class="page">
     <div class="info">
       <img src="./eisenhower-matrix.jpg">
       <a class="more-inf" 
           href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="content">
-      <p id="add-tasks-section"><label for="new-task">Add Item</label>
-        <div class="task-row-wrapper"><input id="new-task"class="task" type="text"><button>Add</button></div>
+      <p id="add-tasks-section"><label for="new-task" class="new-task-label">Add Item</label>
+        <div class="task-row-wrapper"><input id="new-task" class="new-task-input" type="text"><button>Add</button></div>
       </p>
-      <h3>Todo</h3>
+      <h3 class="title">Todo</h3>
       <ul id="incomplete-tasks">
         <li>
           <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
+          <label class="task-label">Pay Bills</label>
+          <input type="text" class="task-input">
           <button class="edit">Edit</button>
           <button class="delete">
             <img src="./remove.svg">
@@ -27,20 +27,20 @@
         </li>
         <li class="edit-mode">
           <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
+          <label class="task-label">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="task-input">
           <button class="edit">Save</button>
           <button class="delete">
             <img src="./remove.svg">
           </button>
         </li>
       </ul>
-      <h3>Completed</h3>
+      <h3 class="title">Completed</h3>
       <ul id="completed-tasks">
         <li>
           <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
+          <label class="task-label">See the Doctor</label>
+          <input type="text" class="task-input">
           <button class="edit">Edit</button>
           <button class="delete">
             <img src="./remove.svg">
