--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body class="page">
     <div class="info">
-      <img src="./eisenhower-matrix.jpg">
+      <img src="./eisenhower-matrix.jpg" alt="eisenhower matrix">
       <a class="more-inf" 
           href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
@@ -22,7 +22,7 @@
           <input type="text" class="task-input">
           <button class="edit">Edit</button>
           <button class="delete">
-            <img src="./remove.svg">
+            <img src="./remove.svg" alt="remove task image">
           </button>
         </li>
         <li class="edit-mode">
@@ -31,7 +31,7 @@
           <input type="text" value="Go Shopping" class="task-input">
           <button class="edit">Save</button>
           <button class="delete">
-            <img src="./remove.svg">
+            <img src="./remove.svg" alt="remove task image">
           </button>
         </li>
       </ul>
@@ -43,7 +43,7 @@
           <input type="text" class="task-input">
           <button class="edit">Edit</button>
           <button class="delete">
-            <img src="./remove.svg">
+            <img src="./remove.svg" alt="remove task image">
           </button>
         </li>
       </ul>
