--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body class="page">
-    <div class="info">
+    <header class="info">
       <img src="./eisenhower-matrix.jpg" alt="eisenhower matrix">
       <a class="more-inf" 
           href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-    </div>
-    <div class="content">
-      <p id="add-tasks-section"><label for="new-task" class="new-task-label">Add Item</label>
+    </header>
+    <main class="content">
+      <section id="add-tasks-section">
+        <h3><label for="new-task" class="new-task-label">Add Item</label></h3>
         <div class="task-row-wrapper"><input id="new-task" class="new-task-input" type="text"><button>Add</button></div>
-      </p>
+      </section>
       <h3 class="title">Todo</h3>
       <ul id="incomplete-tasks">
         <li>
@@ -47,7 +48,7 @@
           </button>
         </li>
       </ul>
-    </div>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
